--- a/style.css
+++ b/style.css
@@ -112,3 +112,21 @@ button:hover{
     box-shadow: 0 5px 1rem rgba(255, 248, 107, 0.2);
 }
 
+button:disabled{
+    transition: none;
+    transform: initial;
+    box-shadow: initial;
+    cursor: not-allowed;
+    color: black;
+}
+
+.loading{
+    animation: pulse 1s infinite;
+
+}
+
+@keyframes pulse {
+    50% {
+        opacity: 0.5;
+    }
+}
